--- a/main.html
+++ b/main.html
@@ -10,6 +10,21 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form method="post">
+	<h1>Feedback Form</h1>
+	<label>Name</label>
+	<input type="text" id="name" required minlength="3" maxlength="50">
+
+	<label>Portolio</label>
+	<input type="url" required id="portfolio">
+
+	<label>Favorite Color</label>
+	<input type="color">
+
+	<label>Likeness</label>
+	<input type="range" min="1" max="100">
+
+	</form>
 
 </body>
 
