--- a/main.html
+++ b/main.html
@@ -12,17 +12,17 @@
 </script>
 	<form method="post">
 	<h1>Feedback Form</h1>
-	<label>Name</label>
+	<label for="name">Name</label>
 	<input type="text" id="name" required minlength="3" maxlength="50">
 
-	<label>Portolio</label>
+	<label for="portfolio">Portolio</label>
 	<input type="url" required id="portfolio">
 
-	<label>Favorite Color</label>
-	<input type="color">
+	<label for="favColor">Favorite Color</label>
+	<input type="color" id="favColor">
 
-	<label>Likeness</label>
-	<input type="range" min="1" max="100">
+	<label for="likeness">Likeness</label>
+	<input type="range" min="1" max="100" id="likeness">
 
 	</form>
 
